--- a/gov.html
+++ b/gov.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Dark Mode Website</title>
+    <title>Official Tinland Government Portal</title>
     <style>
         body {
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #121212;
@@ -36,6 +36,7 @@
             color: #eaeaea;
             font-size: 16px;
             padding: 10px 20px;
+            margin-left: 15px;
             transition: color 0.3s ease;
         }
 
@@ -92,41 +93,77 @@
             text-align: center;
             max-width: 900px;
             margin: 0 auto;
+            background-color: #1f1f1f;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
         }
 
         .main-section h1 {
-            font-size: 3.5rem;
-            margin-bottom: 20px;
+            font-size: 2.8rem;
             color: #fff;
+            margin-bottom: 20px;
         }
 
         .main-section p {
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             color: #ddd;
             line-height: 1.7;
             max-width: 800px;
             margin: 0 auto;
         }
 
-        footer {
+        .news-section, .ration-section {
+            background-color: #1f1f1f;
+            padding: 30px;
+            margin-top: 40px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+        }
+
+        .news-section h2, .ration-section h2 {
+            font-size: 2.2rem;
+            color: #fff;
+            margin-bottom: 15px;
+        }
+
+        .news-item, .ration-item {
+            background-color: #2a2a2a;
+            color: #eaeaea;
+            padding: 20px;
+            margin-bottom: 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .news-item:hover, .ration-item:hover {
+            background-color: #3b3b3b;
+        }
+
+        .footer {
             text-align: center;
             background-color: #1c1c1c;
             color: #eaeaea;
             padding: 20px 0;
-            position: relative;
-            bottom: 0;
-            width: 100%;
             font-size: 14px;
         }
 
-        footer a {
+        .footer a {
             color: #ff6347;
             text-decoration: none;
             font-weight: bold;
         }
 
-        footer a:hover {
+        .footer a:hover {
             text-decoration: underline;
+        }
+
+        .date-stamp {
+            display: block;
+            font-size: 14px;
+            color: #aaa;
+            margin-top: 10px;
+            text-align: right;
+            font-style: italic;
         }
 
     </style>
@@ -134,11 +171,11 @@
 <body>
 
     <nav>
-        <div class="logo">Tinland</div>
+        <div class="logo">Tinland Gov</div>
         <div>
             <a href="index.html">Home</a>
             <div class="dropdown">
-                <button class="dropbtn">Info</button>
+                <button class="dropbtn">Information</button>
                 <div class="dropdown-content">
                     <a href="military.html">Military</a>
                     <a href="tinapedia.html">Tinapedia</a>
@@ -150,7 +187,7 @@
                 <div class="dropdown-content">
                     <a href="login.html">Login</a>
                     <a href="shop.html">Shop</a>
-                    <a href="user-info.html">Your-Page</a>
+                    <a href="user-info.html">Your Page</a>
                 </div>
             </div>
             <a href="donate.html">Donate</a>
@@ -159,12 +196,40 @@
     </nav>
 
     <section class="main-section">
-        <h1>More Stuff Coming Soon on This Page</h1>
-        <p>Test</p>
+        <h1>Welcome to the Tinland Government Portal</h1>
+        <p>Here you can navigate to all the pages of the Tinland site and find important news and rations updates!</p>
     </section>
 
-    <footer>
-        <p>&copy; Tinland | <a href="index.html">Home</a></p>
+    <section class="news-section">
+        <h2>Important News</h2>
+        <div class="news-item">
+            <h3>War With Timland</h3>
+            <p>We are officially at war with Timland. While serving in the military is optional it is highly encouraged. Check the military page for more info.</p>
+            <span class="date-stamp"> December 10, 2024</span>
+        </div>
+        <div class="news-item">
+            <h3>Tin Gambling Released</h3>
+            <p>Tin Gabling is here! Check it out at tinland.online/gambling.html! We have Roulette and Blackjack.</p>
+            <span class="date-stamp">December 22, 2024</span>
+        </div>
+    </section>
+
+    <section class="ration-section">
+        <h2>Rations Updates</h2>
+        <div class="ration-item">
+            <h3>First Rations Bag Bought!</h3>
+            <p>Our first haul has been purchased! It has 155 oreos, 50 dabaitu and 200 nerds gummy clusters!</p>
+            <span class="date-stamp"> December 23, 2024</span>
+        </div>
+        <div class="ration-item">
+            <h3>Ration Amounts Released</h3>
+            <p>Every Tinizen will get 8 candies of their choice per week. 2 on monday and 3 on wenedsday and friday!</p>
+            <span class="date-stamp">December 23, 2024</span>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p>&copy; 2024 Tinland Government | <a href="index.html">Home</a></p>
     </footer>
 
     <script>
@@ -179,7 +244,6 @@
             });
         });
 
-  
         window.addEventListener('click', function(event) {
             const dropdownContents = document.querySelectorAll('.dropdown-content');
             
@@ -193,4 +257,3 @@
 
 </body>
 </html>
-
